--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#menu">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -88,7 +88,7 @@
 
     <!-- PART OF ABOUT STARTİNG-->
 
-    <section class="p-5 text-center hakkimizda">
+    <section class="p-5 text-center hakkimizda" id="about">
 
         <div class="container">
 
@@ -116,7 +116,7 @@
 
     <!-- PART OF TEAM STARTING-->
 
-    <section class="p-5 text-center ekip">
+    <section class="p-5 text-center ekip" id="team">
 
         <div class="container">
 
@@ -213,7 +213,7 @@
 
     <!-- GALLERY START-->
 
-    <section class="p-5 text-center galeri">
+    <section class="p-5 text-center galeri" id="gallery">
 
         <div class="container">
 
@@ -291,7 +291,7 @@
 
     <!-- CONTACT START-->
 
-    <section class="p-5 text-center iletisim">
+    <section class="p-5 text-center iletisim" id="contact">
 
         <div class="container">
 
@@ -323,6 +323,20 @@
     </section>    
 
     <!-- CONTACT END-->
+
+    <!-- FOOTER START-->
+      
+    
+        <div class="bg-dark text-light text-center">
+            <p class="align-middle p-5 mb-0">
+                <span>All Rights Reserved &copy; | 2022</span><br>
+                <span>Designed by <b>CEYLAN</b></span>
+            </p>
+
+        </div>
+
+
+    <!-- FOOTER END-->
 
 
 
